Dashboard app - minor fixes

--- a/apps/_dashboard/templates/gitlog.html
+++ b/apps/_dashboard/templates/gitlog.html
@@ -3,7 +3,7 @@
     <base href="[[=URL('static')]]/">
     <style>
       * {margin: 0;}
-      html {background: white; color: black; font-family: "Courier"; font-size: 10px}}
+      html {background: white; color: black; font-family: "Courier"; font-size: 10px}
       a { color: orange; font-weight: bold}
       td {padding: 5px 10px; color: orange}
       td.linelength { padding: 5px 10px; color: #f1f1f1; font-weight: bold}
