Rounded borders for the fields on the Details page
Apply rounded borders to the fields on the Details page to give them a non-editable appearance. 

This will also affect the Edit page, but it should be fine, as the rounded borders will change the field backgrounds there.

--- a/apps/_dashboard/static/css/no.css
+++ b/apps/_dashboard/static/css/no.css
@@ -575,7 +575,7 @@ label ~ div {
   /* top: -5px; */
   padding: 5px;
   background-color: hsl(0, 0%, 15%);
-  /* border-radius: 6px; */
+  border-radius: 6px;
   min-height: 35px;
   max-height: 150px;
   overflow-wrap: break-word;
