--- a/apps/_dashboard/static/css/future.css
+++ b/apps/_dashboard/static/css/future.css
@@ -17,10 +17,11 @@ p {
    margin-bottom: 10px;
 }
 .logo {
-   padding: 18px;
+   padding: 0 0 0 8px;
    font-size: 64px;
-   position: absolute;
-   top: 0;
+   position: static;
+   line-height: 1;
+   display: inline-block;
 }
 .spinner-top {
    height: 80px;
