--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -36,7 +36,7 @@
             <div class="header" style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="display: flex; align-items: center;">
                     <img src="images/widget.gif" class="spinner-top" />
-                    <span class="logo">py4web Dashboard</span>
+                    <span style="margin-left:80px" class="logo">py4web Dashboard</span>
                 </div>
                 <div style="padding-right: 100px; display: flex; align-items: center; gap: 8px;">
                     <label for="dashboard-theme-select" style="font-size: 12px;">Theme</label>
